Responsive layout tablet

--- a/L3_Responsive_layout.html
+++ b/L3_Responsive_layout.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-<div class="task-3-1 container">
-  <header class="item">header</header>
-  <nav class="item">navigation</nav>
-  <main class="item">main</main>
-  <aside class="item">sidebar</aside>
-  <div class="item ads">ads</div>
-  <footer class="item">footer</footer>
-</div>
+  <div class="task-3-1 container">
+    <header class="item header">header</header>
+    <nav class="item navigation">navigation</nav>
+    <main class="item main">main</main>
+    <aside class="item sidebar">sidebar</aside>
+    <div class="item ads">ads</div>
+    <footer class="item footer">footer</footer>
+  </div>
 </body>
 </html>
