Removed unused classes

--- a/L32_Responsive_Layout_with_template_areas.html
+++ b/L32_Responsive_Layout_with_template_areas.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive layout</title>
+  <title>Responsive layout with Template Areas</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div class="task-3-1 container">
-    <header class="item header">header</header>
-    <nav class="item navigation">navigation</nav>
-    <main class="item main">main</main>
-    <aside class="item sidebar">sidebar</aside>
+  <div class="task-3-2 container">
+    <header class="item">header</header>
+    <nav class="item">navigation</nav>
+    <main class="item">main</main>
+    <aside class="item">sidebar</aside>
     <div class="item ads">ads</div>
-    <footer class="item footer">footer</footer>
+    <footer class="item">footer</footer>
   </div>
 </body>
 </html>
