--- a/L3_Responsive_layout.html
+++ b/L3_Responsive_layout.html
@@ -9,12 +9,12 @@
 
 <body>
   <div class="task-3-1 container">
-    <header class="item header">header</header>
-    <nav class="item navigation">navigation</nav>
-    <main class="item main">main</main>
-    <aside class="item sidebar">sidebar</aside>
+    <header class="item">header</header>
+    <nav class="item">navigation</nav>
+    <main class="item">main</main>
+    <aside class="item">sidebar</aside>
     <div class="item ads">ads</div>
-    <footer class="item footer">footer</footer>
+    <footer class="item">footer</footer>
   </div>
 </body>
 </html>
